fix: add homepage to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "too-many-guitars",
   "version": "0.1.0",
+  "homepage": "https://stevenkitzes.github.io/too-many-guitars",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
